--- a/抖音赚钱宝典掌握赚钱技巧/index.html
+++ b/抖音赚钱宝典掌握赚钱技巧/index.html
@@ -125,7 +125,7 @@ if (!doNotTrack) {
             
                 <li>
                     <a 
-                        href='/imags/wechat.png'
+                        href='/images/wechat.png'
                         target="_blank"
                         title="wechat"
                         rel="me"
@@ -650,9 +650,9 @@ if (!doNotTrack) {
 <li>保证视频画面清晰、音频清晰，剪辑流畅，内容有深度和吸引力，提升用户体验。</li>
 </ul>
 <h3 id="内容规划"><strong>内容规划</strong></h3>
-<ul>
-<li>制定内容规划和发布计划，保持更新频率和稳定性，吸引用户持续关注。</li>
-</ul>
+<p>在进行内容创作和运营管理时，制定详尽的内容规划和发布计划是至关重要的一步。这不仅关乎到内容的质量与多样性，还直接影响到用户的参与度和平台的活跃度。首先，内容规划应当基于对目标受众的深入分析，明确他们的兴趣点、需求以及消费内容的习惯。通过细分内容主题，确保既有深度又能广泛覆盖，满足不同用户群体的偏好。</p>
+<p>发布计划则需考虑最佳发布时间、频次以及各平台的特性。例如，利用数据分析工具找出用户活跃的高峰时段进行发布，可以有效提高内容的曝光率。同时，保持一定的更新频率，如每周固定发布三次，有助于培养用户的阅读或观看习惯，使他们期待并习惯于在特定时间接收到新内容。稳定性同样关键，这意味着内容发布的间隔要相对均衡，避免长时间的中断，以免造成用户的流失。</p>
+<p>为了吸引用户持续关注，内容创新与互动也是不可或缺的一环。可以通过引入热门话题讨论、举办线上活动、邀请行业专家进行访谈等形式，增加内容的吸引力和互动性。同时，积极响应用户的评论和反馈，建立起与用户之间的良好沟通桥梁，让用户感受到被重视和参与感，从而加深他们对品牌的忠诚度。</p>
 <h3 id="互动性"><strong>互动性</strong></h3>
 <ul>
 <li>增加互动元素，如投票、抽奖、挑战等，提升用户参与度和互动性。</li>
