--- a/links/index.html
+++ b/links/index.html
@@ -134,7 +134,7 @@ if (!doNotTrack) {
             
                 <li>
                     <a 
-                        href='/imags/wechat.png'
+                        href='/images/wechat.png'
                         target="_blank"
                         title="wechat"
                         rel="me"
